Fix title spacing

--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,7 @@
 h2 {
   font-family: courier;
   font-size: 20px;
+  margin: 90px 0px 50px;
 }
 
 .post h3 {
